Changes based on the remarks